--- a/layout.css
+++ b/layout.css
@@ -44,6 +44,7 @@ html, body{
     text-align: left;
     margin: 0 auto;
     padding-top: 5px;
+    line-height: 30px;
 }
 
 .conteudo1, .conteudo2{
@@ -84,4 +85,8 @@ table .th{
     color: white;
     text-align: center;
     padding: 5px;
+}
+
+span{
+    background-color: rgb(164, 75, 247)
 }
